# copernicus-mcp

./: Dockerfile  INSTALL.md  README.md  docker-compose.yml  example_download_usage.py  mcp_config.json  pyproject.toml  requirements.txt  run_server.py
copernicus_mcp/: __init__.py  server.py  server_corrupted_backup.py
